[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2", "wheel", "scikit-build-core"]   # PEP 508 specifications.
#build-backend = "setuptools.build_meta"
build-backend = "scikit_build_core.build"

[project]
name = "PyORBIT"
dynamic = ["version"]
description = "Acceleratop Physics Simulation Code"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = [".venv"]
cmake.verbose = true
logging.level = "INFO"
build-dir = "_build"